added user crud

--- a/config/application.yml
+++ b/config/application.yml
@@ -1,3 +1,6 @@
 POSTGRES_USER: postgres
 POSTGRES_PASSWORD: "998915309764"
 POSTGRES_DB: rrf_development
+TELEGRAM_TOKEN: token
+TELEGRAM_CHAT_ID: chat_id
+HOST_URL: host url
